# docling-pgvector

./: .gitattributes  .gitignore  LICENSE  PostgresTest.py  README.md  pgvectorTest.py  pyproject.toml  requirement.txt
.devcontainer/: devcontainer.json  docker-compose.yml  setup.sh
.github/workflows/: docker-image-test.yml  python-app.yml
src/: dconfig.py  docling_test.py  document_processor.py  pgvectorTest.py  pgvector_client.py
test/: batch_processor_test.py  docling_test.py  document_processor_test.py  pgpytest.py  pgvec_client_test.py
