[project]
name = "docling-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.76.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-docling>=2.0.0",
    "pgvector>=0.4.2",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "pytest>=9.0.2",
    "sentence-transformers>=5.2.3",
    "tenacity>=9.1.4",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "typing>=3.10.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]        # pytest to look in src/
testpaths  = ["test"]       # pytest where tests are

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
